--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Débora Montanholi</title>
+    <style>
+        body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #1C1C1C;
+    color: white;
+    text-align: center;
+}
+
+.logo {
+    width: 150px;
+    margin: 20px;
+}
+
+h1 {
+    font-size: 24px;
+    margin: 20px 0;
+}
+
+.buttons-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button {
+    margin: 10px 0;
+}
+
+.button a img {
+    width: 90%;
+    max-width: 400px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.button a img:hover {
+    transform: scale(1.05);
+}
+
+    </style>
 </head>
 <body>
-    
+    <header>
+        <img src="images/logo.png" alt="Debora Montanholi" class="logo">
+    </header>
+
+    <main>
+        <h1>Clique em uma das opções abaixo:</h1>
+        <div class="buttons-container">
+            <div class="button">
+                <a href="https://wa.me/19999913789" target="_blank">
+                    <img src="images/whats.jpg" alt="Atendimento WhatsApp">
+                </a>
+            </div>
+            <div class="button">
+                <a href="consultoria.html">
+                    <img src="consultoria-interiores.png" alt="Sobre a Consultoria de Interiores">
+                </a>
+            </div>
+            <div class="button">
+                <a href="https://www.youtube.com/channel/link_canal" target="_blank">
+                    <img src="canal-fa.png" alt="Acesse o Canal da Fá">
+                </a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
