--- a/index.html
+++ b/index.html
@@ -56,17 +56,13 @@ h1 {
         <div class="buttons-container">
             <div class="button">
                 <a href="https://wa.me/19999913789" target="_blank">
-                    <img src="images/whats.jpg" alt="Atendimento WhatsApp">
+                    <img src="images/whats.png" alt="Atendimento WhatsApp">
                 </a>
             </div>
+            
             <div class="button">
-                <a href="consultoria.html">
-                    <img src="consultoria-interiores.png" alt="Sobre a Consultoria de Interiores">
-                </a>
-            </div>
-            <div class="button">
-                <a href="https://www.youtube.com/channel/link_canal" target="_blank">
-                    <img src="canal-fa.png" alt="Acesse o Canal da Fá">
+                <a href="https://www.instagram.com/deboramontanholi/" target="_blank">
+                    <img src="images/insta.png" alt="">
                 </a>
             </div>
         </div>
